outputs/workspace_output_1771851690_9714.txt
error[E0624]: associated function `new` is private
   --> crypto/pqc.rs:187:60
    |
187 |         let classical_public_key = super::keys::PublicKey::new(
    |                                                            ^^^ private associated function
    |
